@@ -199,7 +199,9 @@ hr {
 }
 
 .div {
-  color: var(--div-color);
+  --border-width: var(--default-border-width);
+  --border-color: var(--default-border-color);
+  color: var(--border-color);
 }
 
 .div::before {
@@ -207,14 +209,9 @@ hr {
   display: block;
   width: 100%;
   height: 100%;
-  min-width: var(--div-width);
-  min-height: var(--div-width);
+  min-width: var(--border-width);
+  min-height: var(--border-width);
   background-color: currentColor;
-}
-
-:root {
-  --div-width: var(--default-border-width);
-  --div-color: var(--default-border-color);
 }
 
 .fit {
